src/objects/PayPal_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Gateway_Data_1__c</fullName>
        <label>Gateway Data 1</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Data_2__c</fullName>
        <label>Gateway Data 2</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Data_3__c</fullName>
        <label>Gateway Data 3</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Payments</label>
        <type>Checkbox</type>
    </fields>
    <label>PayPal Settings</label>
</CustomObject>